--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,7 @@ markers = "fuzzing: Run Hypothesis fuzz test suite"
 line_length = 100
 force_grid_wrap = 0
 include_trailing_comma = true
+known_third_party = ["ape", "pytest", "setuptools", "web3"]
+known_first_party = ["ape_ens"]
 multi_line_output = 3
 use_parentheses = true
