--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ requires = ["setuptools>=51.1.1", "wheel", "setuptools_scm[toml]>=5.0"]
 
 [tool.mypy]
 exclude = "build/"
+check_untyped_defs = true
+plugins = ["pydantic.mypy"]
 
 [tool.setuptools_scm]
 write_to = "ape_ens/version.py"
